import fatass


class Archive(fatass.Node):
    pass
