import fatass


class Coding(fatass.Node):
    pass
