import fatass


class Unis(fatass.Node):
    pass
