import fatass


class Task(fatass.Node):
    pass
