import fatass


class SeminarEssay(fatass.Node):
    pass
