import fatass


class Style(fatass.Node):
    pass
