import fatass


class Tone(fatass.Node):
    pass
