import fatass


class Voice(fatass.Node):
    pass
