import fatass


class Drafting(fatass.Node):
    pass
