import fatass


class Pdf(fatass.Node):
    pass
