import fatass


class Brainstorm(fatass.Node):
    pass
