import fatass


class Structure(fatass.Node):
    pass
