import fatass


class Requirements(fatass.Node):
    pass
