import fatass


class Materials(fatass.Node):
    pass
