import fatass


class Blueprint(fatass.Node):
    pass
