import fatass


class Draft(fatass.Node):
    pass
