import fatass


class Profile(fatass.Node):
    pass
