import fatass


class Analysis(fatass.Node):
    pass
