import fatass


class Audit(fatass.Node):
    pass
