import fatass


class Issues(fatass.Node):
    pass
