import fatass


class Skeleton(fatass.Node):
    pass
