import fatass


class PhdApplication(fatass.Node):
    pass
