import fatass


class Pool(fatass.Node):
    pass
