import fatass


class Profs(fatass.Node):
    pass
