import fatass


class Summary(fatass.Node):
    pass
