import fatass


class Parts(fatass.Node):
    pass
