import fatass


class Sidenote(fatass.Node):
    pass
