import fatass


class Patterns(fatass.Node):
    pass
