import fatass


class Paper(fatass.Node):
    pass
