import fatass


class Thesis(fatass.Node):
    pass
