@startuml
class "topology" as topology
together {
  class "archive" as n_archive
  class "phd_application" as n_phd_application
  class "seminar_essay" as n_seminar_essay
  class "thesis" as n_thesis
}
n_archive .up.> topology
together {
  class "coding" as n_archive_coding
  class "seminar_essay" as n_archive_seminar_essay
}
n_archive_coding .up.> n_archive
together {
  class "blueprint" as n_archive_coding_blueprint
  class "spec" as n_archive_coding_spec
}
n_archive_coding_blueprint .up.> n_archive_coding
n_archive_coding_spec .up.> n_archive_coding
together {
  class "app" as n_archive_coding_spec_app
}
n_archive_coding_spec_app .up.> n_archive_coding_spec
n_archive_seminar_essay .up.> n_archive
together {
  class "analysis" as n_archive_seminar_essay_analysis
  class "audit" as n_archive_seminar_essay_audit
  class "drafting" as n_archive_seminar_essay_drafting
  class "materials" as n_archive_seminar_essay_materials
  class "skeleton" as n_archive_seminar_essay_skeleton
  class "style" as n_archive_seminar_essay_style
}
n_archive_seminar_essay_analysis .up.> n_archive_seminar_essay
together {
  class "references" as n_archive_seminar_essay_analysis_references
  class "subject" as n_archive_seminar_essay_analysis_subject
  class "task" as n_archive_seminar_essay_analysis_task
}
n_archive_seminar_essay_analysis_references .up.> n_archive_seminar_essay_analysis
n_archive_seminar_essay_analysis_subject .up.> n_archive_seminar_essay_analysis
n_archive_seminar_essay_analysis_task .up.> n_archive_seminar_essay_analysis
n_archive_seminar_essay_audit .up.> n_archive_seminar_essay
together {
  class "draft" as n_archive_seminar_essay_audit_draft
  class "draft_star" as n_archive_seminar_essay_audit_draft_star
  class "issues" as n_archive_seminar_essay_audit_issues
}
n_archive_seminar_essay_audit_draft .up.> n_archive_seminar_essay_audit
n_archive_seminar_essay_audit_draft_star .up.> n_archive_seminar_essay_audit
n_archive_seminar_essay_audit_issues .up.> n_archive_seminar_essay_audit
n_archive_seminar_essay_drafting .up.> n_archive_seminar_essay
together {
  class "annotation" as n_archive_seminar_essay_drafting_annotation
  class "draft" as n_archive_seminar_essay_drafting_draft
}
n_archive_seminar_essay_drafting_annotation .up.> n_archive_seminar_essay_drafting
n_archive_seminar_essay_drafting_draft .up.> n_archive_seminar_essay_drafting
n_archive_seminar_essay_materials .up.> n_archive_seminar_essay
together {
  class "papers" as n_archive_seminar_essay_materials_papers
  class "task" as n_archive_seminar_essay_materials_task
}
n_archive_seminar_essay_materials_papers .up.> n_archive_seminar_essay_materials
together {
  class "references" as n_archive_seminar_essay_materials_papers_references
  class "subject" as n_archive_seminar_essay_materials_papers_subject
}
n_archive_seminar_essay_materials_papers_references .up.> n_archive_seminar_essay_materials_papers
n_archive_seminar_essay_materials_papers_subject .up.> n_archive_seminar_essay_materials_papers
n_archive_seminar_essay_materials_task .up.> n_archive_seminar_essay_materials
n_archive_seminar_essay_skeleton .up.> n_archive_seminar_essay
n_archive_seminar_essay_style .up.> n_archive_seminar_essay
together {
  class "ai_pattern" as n_archive_seminar_essay_style_ai_pattern
  class "voice" as n_archive_seminar_essay_style_voice
}
n_archive_seminar_essay_style_ai_pattern .up.> n_archive_seminar_essay_style
n_archive_seminar_essay_style_voice .up.> n_archive_seminar_essay_style
together {
  class "narrative" as n_archive_seminar_essay_style_voice_narrative
  class "tone" as n_archive_seminar_essay_style_voice_tone
}
n_archive_seminar_essay_style_voice_narrative .up.> n_archive_seminar_essay_style_voice
n_archive_seminar_essay_style_voice_tone .up.> n_archive_seminar_essay_style_voice
n_phd_application .up.> topology
together {
  class "pool" as n_phd_application_pool
  class "profile" as n_phd_application_profile
}
n_phd_application_pool .up.> n_phd_application
together {
  class "profs" as n_phd_application_pool_profs
  class "unis" as n_phd_application_pool_unis
}
n_phd_application_pool_profs .up.> n_phd_application_pool
n_phd_application_pool_unis .up.> n_phd_application_pool
n_phd_application_profile .up.> n_phd_application
together {
  class "cv" as n_phd_application_profile_cv
  class "requirement" as n_phd_application_profile_requirement
}
n_phd_application_profile_cv .up.> n_phd_application_profile
n_phd_application_profile_requirement .up.> n_phd_application_profile
n_seminar_essay .up.> topology
together {
  class "materials" as n_seminar_essay_materials
}
n_seminar_essay_materials .up.> n_seminar_essay
together {
  class "analysis" as n_seminar_essay_materials_analysis
  class "drafting" as n_seminar_essay_materials_drafting
  class "papers" as n_seminar_essay_materials_papers
  class "patterns" as n_seminar_essay_materials_patterns
}
n_seminar_essay_materials_analysis .up.> n_seminar_essay_materials
together {
  class "facts" as n_seminar_essay_materials_analysis_facts
  class "interconnection" as n_seminar_essay_materials_analysis_interconnection
  class "intraconnection" as n_seminar_essay_materials_analysis_intraconnection
  class "summary" as n_seminar_essay_materials_analysis_summary
}
n_seminar_essay_materials_analysis_facts .up.> n_seminar_essay_materials_analysis
n_seminar_essay_materials_analysis_interconnection .up.> n_seminar_essay_materials_analysis
n_seminar_essay_materials_analysis_intraconnection .up.> n_seminar_essay_materials_analysis
n_seminar_essay_materials_analysis_summary .up.> n_seminar_essay_materials_analysis
n_seminar_essay_materials_drafting .up.> n_seminar_essay_materials
together {
  class "draft" as n_seminar_essay_materials_drafting_draft
  class "parts" as n_seminar_essay_materials_drafting_parts
  class "structure" as n_seminar_essay_materials_drafting_structure
  class "task" as n_seminar_essay_materials_drafting_task
}
n_seminar_essay_materials_drafting_draft .up.> n_seminar_essay_materials_drafting
n_seminar_essay_materials_drafting_parts .up.> n_seminar_essay_materials_drafting
n_seminar_essay_materials_drafting_structure .up.> n_seminar_essay_materials_drafting
n_seminar_essay_materials_drafting_task .up.> n_seminar_essay_materials_drafting
n_seminar_essay_materials_papers .up.> n_seminar_essay_materials
together {
  class "metadata" as n_seminar_essay_materials_papers_metadata
  class "pdf" as n_seminar_essay_materials_papers_pdf
  class "sidenote" as n_seminar_essay_materials_papers_sidenote
}
n_seminar_essay_materials_papers_metadata .up.> n_seminar_essay_materials_papers
n_seminar_essay_materials_papers_pdf .up.> n_seminar_essay_materials_papers
n_seminar_essay_materials_papers_sidenote .up.> n_seminar_essay_materials_papers
n_seminar_essay_materials_patterns .up.> n_seminar_essay_materials
n_thesis .up.> topology
together {
  class "brainstorm" as n_thesis_brainstorm
}
n_thesis_brainstorm .up.> n_thesis

class "None" as none_node

n_archive_coding_spec -[bold]right-> n_archive_coding_blueprint
none_node -[bold]-> n_archive_coding_spec_app
n_archive_seminar_essay_materials_papers -[bold]right-> n_archive_seminar_essay_analysis_references
n_archive_seminar_essay_materials_papers_subject -[bold]right-> n_archive_seminar_essay_analysis_subject
n_archive_seminar_essay_materials_task -[bold]right-> n_archive_seminar_essay_analysis_task
n_archive_seminar_essay_drafting_draft -[bold]right-> n_archive_seminar_essay_audit_draft
n_archive_seminar_essay_drafting_annotation -[bold]right-> n_archive_seminar_essay_audit_draft
n_archive_seminar_essay_audit_draft -[bold]right-> n_archive_seminar_essay_audit_draft_star
n_archive_seminar_essay_audit_issues -[bold]right-> n_archive_seminar_essay_audit_draft_star
n_archive_seminar_essay_drafting_draft -[bold]right-> n_archive_seminar_essay_drafting_annotation
n_archive_seminar_essay_style_ai_pattern -[bold]right-> n_archive_seminar_essay_drafting_annotation
n_archive_seminar_essay_skeleton -[bold]right-> n_archive_seminar_essay_drafting_draft
n_archive_seminar_essay_style -[bold]right-> n_archive_seminar_essay_drafting_draft
n_archive_seminar_essay_materials -[bold]right-> n_archive_seminar_essay_drafting_draft
n_archive_seminar_essay_analysis -[bold]right-> n_archive_seminar_essay_skeleton
n_phd_application_pool_unis -[bold]right-> n_phd_application_pool_profs
none_node --> n_phd_application_pool_unis : search
n_seminar_essay_materials_papers -[bold]right-> n_seminar_essay_materials_analysis
n_seminar_essay_materials_drafting_parts -[bold]right-> n_seminar_essay_materials_drafting_draft
n_seminar_essay_materials_drafting_structure -[bold]right-> n_seminar_essay_materials_drafting_parts
n_seminar_essay_materials_analysis -[bold]right-> n_seminar_essay_materials_drafting_parts
n_seminar_essay_materials_papers -[bold]right-> n_seminar_essay_materials_drafting_parts
n_seminar_essay_materials_drafting_task -[bold]right-> n_seminar_essay_materials_drafting_structure
none_node --> n_seminar_essay_materials_patterns : search
none_node --> n_thesis_brainstorm : start
@enduml
